wpi/checkerframework_3.34.0_results_WPI/SimplifiedTestCode-after-wpi.txt
../dataset/SimplifiedTestCode/src/Game.java:39: error: (method.invocation) $$ 3 $$ setGame(Game) $$ @UnderInitialization(PlayerDependentMoveValidator.class) @NonNull PlayerDependentMoveValidator $$ @Initialized @NonNull PlayerDependentMoveValidator $$ ( 825, 843 ) $$ call to setGame(Game) not allowed on the given receiver.
        this.setGame(game);
                    ^
  found   : @UnderInitialization(PlayerDependentMoveValidator.class) @NonNull PlayerDependentMoveValidator
  required: @Initialized @NonNull PlayerDependentMoveValidator
1 error
